# Cambio-Express

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  gunicorn.conf.py  pyproject.toml  pytest.ini  run.sh
backend/project/api/: middlewares.py
backend/project/authe/: auth.py  form.py  middlewares.py  urls.py  views.py
backend/project/project/: urls.py
backend/project/tests/: conftest.py  test_api.py  test_register_route.py  test_route.py
backend/src/: .env.example  manage.py  pytest.ini
backend/src/accounts/: models.py  urls.py  views.py
backend/src/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/apis/: models.py  urls.py
backend/src/authe/: middlewares.py  models.py  serializers.py  urls.py  views.py
backend/src/authentication/: auth.py  middlewares.py  serializers.py  urls.py  views.py
backend/src/backend/: urls.py
backend/src/clients/: models.py
backend/src/companies/: models.py
backend/src/feedbacks/: admin.py  models.py  urls.py  views.py
backend/src/finances/: admin.py  models.py
backend/src/marketplace/: form.py  models.py  serializers.py  urls.py  views.py
backend/src/me/: urls.py  views.py
backend/src/offers/: admin.py  filter.py  models.py  views.py
backend/src/offerts/: admin.py  filter.py  models.py  serializers.py  urls.py  views.py
backend/src/project/: urls.py
backend/src/transactions/: models.py  views.py
backend/src/users/: admin.py  models.py  urls.py  views.py
backend/tests/: conftest.py  test_api.py
(+399 files in other folders)
